--- a/TIC-TAC-TOE.HTML
+++ b/TIC-TAC-TOE.HTML
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="TIC-TAC-TOE.CSS">
 </head>
 <body>
+    <h1>this is tic-tac-toe game</h1>
     <div class="msg-container hide">
         <p id="msg">winner</p>
         <button id="new-btn">new Game</button>
